# laravel-docs-source

./: .env.example  .gitignore  Dockerfile  README.md  filtering.py  init.py  main.py  pyproject.toml  requirements.txt  run.sh  translation_prompt.txt  utils.py
.github/workflows/: update-docs.yml
10.x/ko/: artisan.md  authentication.md  authorization.md  billing.md  blade.md  broadcasting.md  cache.md  cashier-paddle.md  collections.md  configuration.md  console-tests.md  container.md  contracts.md  contributions.md  controllers.md  csrf.md  database-testing.md  database.md  deployment.md  documentation.md  dusk.md  eloquent-collections.md  eloquent-factories.md  eloquent-mutators.md  eloquent-relationships.md  eloquent-resources.md  eloquent-serialization.md  eloquent.md  encryption.md  envoy.md  errors.md  events.md  facades.md  filesystem.md  folio.md  fortify.md  frontend.md  hashing.md  helpers.md  homestead.md  (+57 more)
11.x/ko/: artisan.md  authentication.md  authorization.md  billing.md  blade.md  broadcasting.md  cache.md  cashier-paddle.md  collections.md  concurrency.md  configuration.md  console-tests.md  container.md  context.md  contracts.md  contributions.md  controllers.md  csrf.md  database-testing.md  database.md  deployment.md  documentation.md  dusk.md  eloquent-collections.md  eloquent-factories.md  eloquent-mutators.md  eloquent-relationships.md  eloquent.md  (+72 more)
sample/: logging-deepl.md  logging-openai.md  translate-deepl.py  translate-openai.py
utils/: __init__.py  chunk.py  common.py  docs.py  filtering.py  git.py  token_counter.py  translation.py
(+400 files in other folders)
